add file foldr and structure

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600;700&family=Instrument+Sans:wght@400;600;700&family=Poppins&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  img{
+    @apply w-full
+  }
+  .section{
+    @apply container mx-auto py-24 px-6
+  }
+}
