creat courese page

--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,13 @@
 @tailwind utilities;
 
 @layer base {
-  img{
-    @apply w-full
+  img {
+    @apply w-full;
   }
-  .section{
-    @apply container mx-auto py-24 px-6 min-h-screen
+  .section {
+    @apply container mx-auto py-24 px-6 min-h-screen;
+  }
+  .animate-slide:hover {
+    animation-play-state: paused;
   }
 }
